--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,8 +9,7 @@ on:
   pull_request:
     branches:
       - master
-  schedule:
-    - cron: '0 2 * * *'
+  workflow_call:
 
 env:
   CABAL_CACHE_DISABLE: ${{ vars.CABAL_CACHE_DISABLE }}
